📦 Port particles
+ Ported vanilla leaf particle behavior